# neurodyn-exercises

./: README.md  chapter1.ipynb  hello.py  pyproject.toml
