[project]
name = "exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "brian2>=2.8.0.1",
    "matplotlib>=3.10.0",
    "neurodynex3>=1.0.2",
    "numpy>=2.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
